import Util.UserHandler;

public class Main {
    public static void main(String[] args){


        Streaming streaming = new Streaming();

        streaming.streamSetup();



    }
}